# Aegis-Workspace

./: .env.example  APPLY_0006_REVIEW.md  BUILD_NOTES_PDF.md  CAPTURE_SESSION.md  CIPHER2_theametuers_Documentation.html  ENGINE_AUDIT.md  FINAL_CHECKLIST.md  MORNING_RUNLIST.md  NEXT_STEPS.md  README.md  middleware.ts  pyproject.toml
aegis/adapters/: repo_db.py  repo_mock.py  repo_seed.py
aegis/api/: main.py
aegis/domain/: models.py
aegis/engine/: config.py  phase_a_scoring.py  phase_b_dedupe.py  phase_b_match.py  phase_b_tasks.py  phase_b_teams.py  phase_c_health.py  pipeline.py
aegis/seed/: seed.json
aegis/tests/: test_adapters.py  test_phase_a.py  test_phase_b_dedupe.py  test_phase_b_match.py  test_phase_b_tasks.py  test_phase_b_teams.py  test_phase_c_health.py  test_pipeline.py  test_smoke.py
app/: globals.css  page.tsx
app/alerts/: page.tsx
app/governance/: page.tsx
app/settings/: page.tsx
app/teams/: page.tsx
components/: dashboard.tsx  student-workspace.tsx
components/aegis/: app-shell.tsx  chat-panel.tsx  evidence-bar.tsx  health-ring.tsx  open-workspace-button.tsx  theme-toggle.tsx
components/auth/: auth-frame.tsx  password-input.tsx
components/ui/: card-zoom.tsx  skeleton.tsx
gates/: PHASE_A.md  PHASE_B.md  PHASE_C.md
lib/: format.ts
scripts/: load_supabase.py
supabase/: INTEGRATION.md
supabase/migrations/: 0003_engine_fields.sql
