[project]
name = "aegis"
version = "0.1.0"
description = "AEGIS — evidence-weighted capstone allocation engine (CIPHER 2.0)"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn>=1.6",  # Phase A dedupe (TF-IDF cosine)
    "matching>=1.4",      # Phase B Abraham–Manlove SPA
    "fastapi>=0.116",     # Phase D API
    "uvicorn>=0.30",      # ASGI server for the API
    "supabase>=2.3",      # live data source (read adapter + loader)
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# long descriptive mock project abstracts are data, not code
"aegis/adapters/repo_mock.py" = ["E501"]

[tool.mypy]
python_version = "3.13"
mypy_path = "."
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["aegis/tests"]
addopts = "-q"
